--- a/LazyMessages/app/src/main/AndroidManifest.xml
+++ b/LazyMessages/app/src/main/AndroidManifest.xml
@@ -4,21 +4,30 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LazyMessages">
         <activity
-            android:name=".MainActivity"
-            android:exported="true"
-            >
+            android:name=".SplashScreen"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"></activity>
+        <activity
+            android:name=".CreateMessage"
+            android:parentActivityName=".MainActivity"></activity>
+        <activity
+            android:name=".MessageList"
+            android:parentActivityName=".MainActivity"></activity>
+        <activity
+            android:name=".DetailMessage"
+            android:parentActivityName=".MessageList"
+            ></activity>
     </application>
 
 </manifest>
