--- a/LazyMessages/app/build.gradle
+++ b/LazyMessages/app/build.gradle
@@ -34,13 +34,16 @@ android {
 
 dependencies {
 
+    implementation 'com.github.yesidlazaro:GmailBackground:1.2.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.squareup.retrofit2:retrofit'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'androidx.work:work-runtime:2.4.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
 }
