--- a/LazyMessages/app/build.gradle
+++ b/LazyMessages/app/build.gradle
@@ -42,8 +42,10 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'androidx.work:work-runtime:2.4.0'
+    implementation 'androidx.room:room-runtime:2.2.5'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    annotationProcessor 'androidx.room:room-compiler:2.2.5'
 
 }
