--- a/LazyMessages/app/src/main/AndroidManifest.xml
+++ b/LazyMessages/app/src/main/AndroidManifest.xml
@@ -26,14 +26,14 @@
             android:name=".MainActivity"
             android:exported="true"></activity>
         <activity
-            android:name=".CreateMail"
+            android:name=".createMail.CreateMailActivity"
             android:parentActivityName=".MainActivity"></activity>
         <activity
-            android:name=".MailList"
+            android:name=".mailList.MailListActivity"
             android:parentActivityName=".MainActivity"></activity>
         <activity
-            android:name=".DetailMail"
-            android:parentActivityName=".MailList"
+            android:name=".detailMail.DetailMailActivity"
+            android:parentActivityName=".mailList.MailListActivity"
             ></activity>
     </application>
 
